[package]
name = "uapi-config"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>", "Aster Boese <asterboese@mailbox.org>"]
edition = "2024"
rust-version = "1.85.1"
categories = ["config"]
description = "Rust implementation of the UAPI Configuration Files Specification"
documentation = "https://docs.rs/uapi-config/0.1.0/"
keywords = ["econf", "libeconf", "systemd", "uapi"]
readme = "README.md"
repository = "https://github.com/Arnavion/uapi-config"
include = [
    "Cargo.toml",
    "COPYING",
    "README.md",
    "src/**/*",
]

[dependencies]
dirs = { version = "6", default-features = false, optional = true }

[features]
# Enable this feature to use `dirs::config_dir()` in the implementation of `SearchDirectories::modern_user()`
dirs = ["dep:dirs"]
