[package]
name = "uapi-config"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2024"
categories = ["config"]
description = "Rust implementation of the UAPI Configuration Files Specification"
documentation = "https://docs.rs/uapi-config/0.1.0/"
keywords = ["econf", "libeconf", "systemd", "uapi"]
readme = "README.md"
repository = "https://github.com/Arnavion/uapi-config"
include = [
    "Cargo.toml",
    "COPYING",
    "README.md",
    "src/**/*",
]

[dependencies]
dirs = { version = "6", default-features = false, optional = true }

[features]
# Enable this feature to use `dirs::config_dir()` in the implementation of `SearchDirectories::with_user_directory()`
dirs = ["dep:dirs"]

[lints.rust]
rust_2018_idioms = "deny"
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
default_trait_access = "allow"
must_use_candidate = "allow"
